--- a/index.html
+++ b/index.html
@@ -35,17 +35,17 @@
         <div class="w-full max-w-3xl flex flex-col items-center text-center px-4">
             <h2 class="text-[3rem] font-bold text-white font-proxima mb-10">Pursuit Gong Ceremony</h2>
             <div class="mt-8 mb-8 flex justify-center w-full">
-                <img src="gong.png" alt="Gong" id="gong" class="gong" />
+                <img src="assets/gong.png" alt="Gong" id="gong" class="gong" />
             </div>
             <button id="soundToggle" class="sound-toggle">Reset</button>
             <div class="flex flex-col items-center justify-center mt-8">
-                <img src="pursuit-logo.png" alt="Pursuit Logo" class="max-w-[187.5px] mb-0 mx-auto block" />
+                <img src="assets/pursuit-logo.png" alt="Pursuit Logo" class="max-w-[187.5px] mb-0 mx-auto block" />
                 <div class="text-white text-sm text-center opacity-80 mt-2">Made with love by Pursuit<br />© <span id="copyright-year"></span></div>
             </div>
         </div>
     </main>
     <canvas id="confetti-canvas" style="position:fixed;top:0;left:0;width:100vw;height:100vh;pointer-events:none;z-index:10;"></canvas>
-    <audio id="gongSound" src="gong.mp3"></audio>
+    <audio id="gongSound" src="assets/gong.mp3"></audio>
     <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
     <script src="script.js"></script>
 </body>
