--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Pursuit Gong Ceremony</title>
     <link rel="stylesheet" href="styles.css">
     <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="icon" type="image/x-icon" href="assets/favicon.ico">
 </head>
 <body class="min-h-screen bg-[#4242ea] flex flex-col">
     <!-- Hamburger Icon -->
