--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <button id="soundToggle" class="sound-toggle">Reset</button>
             <div class="flex flex-col items-center justify-center mt-8">
                 <img src="assets/pursuit-logo.png" alt="Pursuit Logo" class="max-w-[187.5px] mb-0 mx-auto block" />
-                <div class="text-white text-sm text-center opacity-80 mt-2">Made with love by Pursuit<br />© <span id="copyright-year"></span></div>
+                <div class="text-white text-sm text-center opacity-80 mt-2">Made with Love by Pursuit<br />© <span id="copyright-year"></span></div>
             </div>
         </div>
     </main>
